--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>  
     <main>
         <header>
-            <h1>Titulo so Site</h1>
+            <h1>Cursos gratise</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de Hmtl5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit ab unde veniam necessitatibus hic distinctio qui quas natus nostrum sed debitis error, eligendi soluta fuga voluptatem odit, nulla eveniet. Eos?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, natus id tempora possimus nobis enim aperiam quae, nesciunt nulla rem nihil eos? Incidunt sapiente et at voluptatibus minus. Voluptatem, ullam.</p>
         </article>
     </main>
     
