Add Imagens e Links

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos gratise</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de Hmtl5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso Html">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit ab unde veniam necessitatibus hic distinctio qui quas natus nostrum sed debitis error, eligendi soluta fuga voluptatem odit, nulla eveniet. Eos?</p>
+            <p><a href="curso-html.html">Acesse o curso de HMTL5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, natus id tempora possimus nobis enim aperiam quae, nesciunt nulla rem nihil eos? Incidunt sapiente et at voluptatibus minus. Voluptatem, ullam.</p>
+            <p><a href="curso-html.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
     
